# satzilla

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
SAT-features-competition2024/: BinSolver.cc  BinSolver.h  BuildSolvers.cc  Makefile  SATinstance.cc  SATinstance.h  extractor_core.cc  extractor_core.h  features  features.cc  global.h  satzilla_c_api.cc  satzilla_c_api.h
SAT-features-competition2024/tests/: package_smoke.cnf  test_package.py  test_package_install.py  test_python_interface.py
satzilla_features/: __init__.py  api.py
src/: extractor_core.cc
src/tests/: test_package.py  test_python_interface.py
